# libviso

./: CMakeLists.txt  README.md
report/: RobilOdometry.tex  simple.bib
src/: CMakeLists.txt  calib_sfm.cpp  estimation.cpp  estimation.h  image_pair_iterator.hpp  kitti.cpp  logger.h  main.cpp  misc.cpp  misc.h  mod3d.cpp  mvg.cpp  mvg.h  registration.cpp  triangulation.cpp  triangulation.h  viso.cpp  viso.cpp.old  viso.cpp.old.1  viso.h
test/: CMakeLists.txt  test.cpp
